[package]
name = "profenheimer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#blondie = "0.4.1"
blondie = { path = "../blondie" }
ferrisetw = "1.1.0"
inferno = "0.11.15"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Etw",
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation"
]}
tinyfiledialogs = "3.9.1"
colored = "2.0.0"
