[package]
name = "profenheimer"
description = "I am become depth, destroyer of stacks."
authors = ["burgerindividual"]
version = "0.1.2"
edition = "2021"

[dependencies]
inferno = "0.11.15"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Etw",
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
]}
tinyfiledialogs = "3.9.1"
ctrlc = "3.4.0"
rustc-hash = "1.1.0"
clap = { version = "4.3.8", features = ["cargo"] }
object = "0.31.1"
pdb-addr2line = { git = "https://github.com/burgerindividual/pdb-addr2line.git" }
symsrv = "0.2.0"
tokio = { version = "1.29.1", features = ["fs", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"

[profile.production]
inherits = "release"
lto = "fat"
